load(
    "//ign_bazel:cmake_configure_file.bzl",
    "cmake_configure_file",
)

PROJECT_SOURCE_DIR = "./ign_sensors/src"
PROJECT_BINARY_DIR = "./ign_sensors/src"
CMAKE_BINARY_DIR = "./ign_sensors/src"

cmake_configure_file(
    name = "test_config",
    src = "test_config.h.in",
    out = "test_config.h",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "PROJECT_SOURCE_DIR=%s" % (PROJECT_SOURCE_DIR),
        "PROJECT_BINARY_DIR=%s" % (PROJECT_BINARY_DIR),
        "CMAKE_BINARY_DIR=%s" % (CMAKE_BINARY_DIR),
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "test_utils",
    srcs = ["test_config.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

headers = [
    "integration/TransportTestTools.hh",
]

sensors = [
    "AirPressureSensor",
    "AltimeterSensor",
    "CameraSensor",
    "DepthCameraSensor",
    "GpuLidarSensor",
    "ImageNoise",
    "ImuSensor",
    "Lidar",
    "LogicalCameraSensor",
    "MagnetometerSensor",
    "RenderingSensor",
    "RgbdCameraSensor",
    "ThermalCameraSensor",
]

[
    cc_test(
        name = "INTEGRATION_" + test.split('/')[1].replace('.cc', ''),
        srcs = [ test ] + headers,
        deps = [
          ":test_utils",
          "//sdformat",
          "//ign_msgs",
          "//ign_common",
          "//ign_common/events:events",
          "//ign_sensors",
          "@gtest//:gtest",
          "@gtest//:gtest_main",
          ] + ["//ign_sensors:%s" % sensor for sensor in sensors],
        includes = [".", "plugins", "integration"],
    ) for test in glob(["integration/*.cc"])
]
