load(
    "//ign_bazel:cmake_configure_file.bzl",
    "cmake_configure_file",
)

PROJECT_SOURCE_DIR = "./ign_sensors/src"
PROJECT_BINARY_DIR = "./ign_sensors/src"
CMAKE_BINARY_DIR = "./ign_sensors/src"

cmake_configure_file(
    name = "test_config",
    src = "test_config.h.in",
    out = "test_config.h",
    cmakelists = ["CMakeLists.txt"],
    defines = [
        "PROJECT_SOURCE_DIR=%s" % (PROJECT_SOURCE_DIR),
        "PROJECT_BINARY_DIR=%s" % (PROJECT_BINARY_DIR),
        "CMAKE_BINARY_DIR=%s" % (CMAKE_BINARY_DIR),
    ],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "test_utils",
    srcs = ["test_config.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

headers = [
    "integration/TransportTestTools.hh",
]

sensors = [
    "AirPressureSensor",
    "AltimeterSensor",
    "CameraSensor",
    "DepthCameraSensor",
    "GpuLidarSensor",
    "ImuSensor",
    "Lidar",
    "LogicalCameraSensor",
    "MagnetometerSensor",
    "RenderingSensor",
    "RgbdCameraSensor",
    "ThermalCameraSensor",
]

# NOTE the below sensors names MUST correspond to the above sensors by index
sensor_names = [
   "air_pressure",
   "altimeter",
   "camera",
   "depth_camera",
   "gpu_lidar",
   "imu",
   "lidar",
   "logical_camera",
   "magnetometer",
   "rendering",
   "rgbd_camera",
   "thermal_camera",
]

[
    cc_test(
        name = "INTEGRATION_" + test.split('/')[1].replace('.cc', ''),
        srcs = [ test ] + headers,
        deps = [
          ":test_utils",
          "//sdformat",
          "//ign_msgs",
          "//ign_common",
          "//ign_common/events:events",
          "//ign_sensors",
          "@gtest//:gtest",
          "@gtest//:gtest_main",
          ] + ["//ign_sensors:ignition-sensors4-%s" % sensor for sensor in sensor_names],
        includes = [".", "integration"],
        data = [":integration"],
    ) for test in glob(["integration/*.cc"])
]

exports_files(["integration"])
