load("@rules_gazebo//gazebo:headers.bzl", "gz_configure_header")

package(
    default_applicable_licenses = ["//:license"],
    features = [
        "layering_check",
        "parse_headers",
    ],
)

gz_configure_header(
    name = "Config",
    testonly = 1,
    src = "test_config.hh.in",
    out = "include/test_config.hh",
    defines = [
        "CMAKE_BINARY_DIR=.",
        "PROJECT_BINARY_DIR=.",
        "PROJECT_SOURCE_DIR=.",
    ],
    package_xml = "//:package.xml",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:gz-sensors",
        "@googletest//:gtest",
        "@gz-common",
    ],
)

filegroup(
    name = "sdf",
    testonly = 1,
    srcs = glob(["sdf/**"]),
    visibility = ["//:__subpackages__"],
)
