add_library(${PROJECT_LIBRARY_TARGET_NAME}-camera SHARED
  CameraSensor.cc
  ImageSaver.cc)

target_include_directories(${PROJECT_LIBRARY_TARGET_NAME}-camera PRIVATE
  ${PROJECT_SOURCE_DIR}
  ${IGNITION-TRANSPORT_INCLUDE_DIRS})

target_include_directories(${PROJECT_LIBRARY_TARGET_NAME}-camera PUBLIC
  ${IGNITION-MSGS_INCLUDE_DIRS})

target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}-camera PUBLIC
  ${IGNITION-MSGS_LIBRARIES}
  ${IGNITION-TRANSPORT_LIBRARIES}
  ${PROJECT_LIBRARY_TARGET_NAME})

target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}-camera PRIVATE
  ${PROJECT_LIBRARY_TARGET_NAME}_headers)

ign_install_library(${PROJECT_LIBRARY_TARGET_NAME}-camera ${PROJECT_EXPORT_NAME})
