add_library(${PROJECT_LIBRARY_TARGET_NAME}-gpu-lidar SHARED
  GpuLidarSensor.cc)

target_include_directories(${PROJECT_LIBRARY_TARGET_NAME}-gpu-lidar PRIVATE
  ${PROJECT_SOURCE_DIR}
  ${IGNITION-TRANSPORT_INCLUDE_DIRS})

target_include_directories(${PROJECT_LIBRARY_TARGET_NAME}-gpu-lidar PUBLIC
  ${IGNITION-MSGS_INCLUDE_DIRS})

target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}-gpu-lidar PUBLIC
  ${IGNITION-MSGS_LIBRARIES}
  ${IGNITION-TRANSPORT_LIBRARIES}
  ${PROJECT_LIBRARY_TARGET_NAME})

target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}-gpu-lidar PRIVATE
  ${PROJECT_LIBRARY_TARGET_NAME}_headers)

ign_install_library(${PROJECT_LIBRARY_TARGET_NAME}-gpu-lidar ${PROJECT_EXPORT_NAME})
